attempt at fixing bug on mobile

--- a/index.css
+++ b/index.css
@@ -30,6 +30,6 @@
     left: 0;
     position:absolute;
     height: 100%;
-    width: 100%;
+    width: 100vw;
     background-color: #230e0e;
 }
